--- a/recrutement.html
+++ b/recrutement.html
@@ -18,16 +18,16 @@ class: job
             <div class="row">
                 <div class="col-md-offset-1 col-md-10 history">
                     <p>
-                        <b>WeScale</b> est une société de conseil dédiée au cloud computing, avec un esprit startup !
+                        <b>WeScale</b> est une société de conseil dédiée au <b>cloud computing</b>, avec un esprit startup !
                     </p>
                     <p>
-                        Mais c’est avant tout une équipe de <b>passionnés</b>, chacun par ses sujets qu’ils soient techniques ou non, qui accompagne, avec un brin de folie, ses clients dans la réalisation de leurs projets.
+                        Mais c’est avant tout <b>une équipe de passionnés</b>, chacun par ses sujets qu’ils soient techniques ou non, qui accompagne, avec un brin de folie, ses clients dans <b>la réalisation de leurs projets</b>.
                     </p>
                     <p>
-                        Depuis la création de WeScale en <b>2015</b>, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’une vision commune : “<b>Cloud Experts</b>”.
+                        Depuis la création de WeScale en <b>2015</b>, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’<b>une vision commune</b> : “<b>Cloud Experts</b>”.
                     </p>
                     <p>
-                        Rejoindre WeScale, c'est participer à une aventure humaine, relever des défis, apprendre chaque jour, mais aussi s'amuser.
+                        Rejoindre WeScale, c'est participer à <b>une aventure humaine</b>, relever des défis, apprendre chaque jour, mais aussi s'amuser.
                     </p>
                     <p>    
                         Entrez dans la <b>#WeTribu</b> !
