--- a/index.html
+++ b/index.html
@@ -53,6 +53,31 @@ class: home
 
 
 <div class="content" style="padding-top: 0px">
+    <section class="home-layer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <p><b>WeScale</b> confirme son <b>savoir-faire</b> et son <b>expertise</b> sur le cloud, en devenant
+                        l’une des <b>rares entreprises françaises</b> à la fois certifiée :</p>
+                    <p>
+                        <b>Advanced Consulting Partner</b> par Amazon Web Services et <b>Google Cloud Partner</b> par
+                        Google Cloud Platform..</p>
+                </div>
+            </div>
+            <div class="row vertical-align">
+                <div class="col-md-6">
+                    <a href="https://aws.amazon.com/fr/partners/find/partnerdetails/?n=WeScale&id=001E0000019GSurIAG" target="_blank">
+                        <img width="300px" src="{{"/images/partenariats/aws-advanced-consulting-partner.png"|
+                                relative_url }}" alt="AWS Advanced Consulting Partner""></a>
+                </div>
+                <div class="col-md-6">
+                    <a href="https://cloud.google.com/partners/directory/#?q=wescale" target="_blank">
+                        <img width="300px" src="{{"/images/partenariats/Google-Cloud-Partner-Badge.png"|
+                                relative_url }}" alt="Google Cloud Partner""></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="home-techtrends">
         <div class="container">
             <div class="row">
