center join button in job page in both vertical and horizontal directions

--- a/recrutement.html
+++ b/recrutement.html
@@ -55,9 +55,9 @@ class: job
 </section>
 <section class="side-image" id="rejoindre-wescale">
                 <div class="col-md-4 visible-lg-block visible-md-block image-holder-left">
-                    <div class="welcome-box job-profils">
+                    <div class="welcome-box job-profils vertical-align">
 
-                        <a href="https://wescale.welcomekit.co" class="job-button" style="margin-top: 45vh; padding: 10px;">
+                        <a href="https://wescale.welcomekit.co" class="job-button" style="">
                                 <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
 
                     </div>
