--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ class: home
                         l’une des <b>rares entreprises françaises</b> à la fois certifiée :</p>
                     <p>
                         <b>Advanced Consulting Partner</b> par Amazon Web Services et <b>Google Cloud Partner</b> par
-                        Google Cloud Platform..</p>
+                        Google Cloud Platform.</p>
                 </div>
             </div>
             <div class="row vertical-align">
