--- a/recrutement.html
+++ b/recrutement.html
@@ -24,7 +24,7 @@ class: job
                         Mais c’est avant tout <b>une équipe de passionnés</b>, chacun par ses sujets qu’ils soient techniques ou non, qui accompagne, avec un brin de folie, ses clients dans <b>la réalisation de leurs projets</b>.
                     </p>
                     <p>
-                        Depuis la création de WeScale en <b>2015</b>, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’<b>une vision commune</b> : “<b>Cloud Experts</b>”.
+                        Depuis la création de WeScale en <b>2015</b>, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’<b>une vision commune</b> : “<b>Improve Together</b>”.
                     </p>
                     <p>
                         Rejoindre WeScale, c'est participer à <b>une aventure humaine</b>, relever des défis, apprendre chaque jour, mais aussi s'amuser.
