--- a/mentions.html
+++ b/mentions.html
@@ -23,6 +23,7 @@ class: mentions
                     <li>Capital social : 51 204,81 €</li>
                     <li>Numéro RCS : 811 315 167 R.C.S. Nanterre</li>
                     <li>Numéro d’agrément : 11 75 553 1375</li>
+                    <li>Numéro SIRET : 811 315 167 00031</li>
                 </ul>
             </div>
           </div>
