--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,16 @@ class: contact
 
                 <input type="submit" value="Envoyer" />
               </form>
+              <!--[if lte IE 8]>
+              <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+              <![endif]-->
+              <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+            <script>
+              hbspt.forms.create({
+                portalId: "2583450",
+                formId: "07565e6f-8cb0-4ce8-8a35-621633a32280"
+            });
+            </script>
 
             </div>
             <div class="col-md-4">
