--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@ class: contact
             <script>
               hbspt.forms.create({
                 portalId: "2583450",
-                formId: "07565e6f-8cb0-4ce8-8a35-621633a32280"
+                formId: "07565e6f-8cb0-4ce8-8a35-621633a32280",
+                css:"contact-form"
             });
             </script>
 
