Use origin scheme with '//' instead of clear http

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ class: home
                 <div class="col-md-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link-conteneurs" href="http://info.wescale.fr/techtrends-conteneurs" target="_blank"><img src="{{"/images/couverture-tt-conteneurs-3.png"|
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/techtrends-conteneurs" target="_blank"><img src="{{"/images/couverture-tt-conteneurs-3.png"|
                                 relative_url }}" alt="Techtrends Conteneurs" /></a>
                         </div>
                         <div class="techtrends-text">
@@ -111,7 +111,7 @@ class: home
                                 conteneurisée avec les bons outils. Pour finir, le chapitre <b>Exploiter</b> vous aide à
                                 faire vivre la plateforme conteneurisée.
                             </p>
-                            <p class="news-readmore"><a href="http://info.wescale.fr/techtrends-conteneurs" target="_blank">Télécharger</a>
+                            <p class="news-readmore"><a href="//info.wescale.fr/techtrends-conteneurs" target="_blank">Télécharger</a>
                             </p>
                         </div>
                     </div>
@@ -119,7 +119,7 @@ class: home
                 <div class="col-md-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link-cloud" href="http://info.wescale.fr/techtrends-cloud" target="_blank"><img src="{{"/images/techtrends-cloud-3.png"|
+                            <a id="tt-link-cloud" href="//info.wescale.fr/techtrends-cloud" target="_blank"><img src="{{"/images/techtrends-cloud-3.png"|
                                 relative_url }}" alt="Techtrends Cloud" /></a>
                         </div>
                         <div class="techtrends-text">
@@ -134,7 +134,7 @@ class: home
                                 multiplient en conséquence. Les décideurs sont confrontés à des choix stratégiques et
                                 technologiques
                                 difficiles.</p>
-                            <p class="news-readmore"><a href="http://info.wescale.fr/techtrends-cloud" target="_blank">Télécharger</a>
+                            <p class="news-readmore"><a href="//info.wescale.fr/techtrends-cloud" target="_blank">Télécharger</a>
                             </p>
                         </div>
                     </div>
