--- a/formations.html
+++ b/formations.html
@@ -21,7 +21,7 @@ class: formations
               <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-docker-kubernetes-test.png" | relative_url }}"></a>
             </div>
             <div class="col-md-4" style="text-align:center;">
-              <a href="{{"/formations/Ansible.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-ansible-test.png" | relative_url }}"></a>
+              <a href="{{"/formations/Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-kubernetes.png" | relative_url }}"></a>
             </div>
           </div>
             <div class="row">
