--- a/mission.html
+++ b/mission.html
@@ -2,7 +2,7 @@
 layout: default
 title: Notre mission - Wescale - Cloud expert
 class: mission
-img_improve: /images/pola-wescale.png
+img_improve: /images/mission/pola-wescale.png
 ---
 <section id="mission" class="mission-top">
      <div class="container">
