--- a/mission.html
+++ b/mission.html
@@ -43,7 +43,7 @@ img_improve: /images/mission/pola-wescale.png
                     {{ my-include | markdownify }}
                 </div>
                 <div class="col-md-4 hidden-xs">
-                    <img src="{{ page.img_improve | relative_url }}" class="img-thumbnail"/>
+                    <img src="{{ page.img_improve | relative_url }}" />
                 </div>
             </div>
         </div>
