--- a/mission.html
+++ b/mission.html
@@ -50,7 +50,7 @@ img_improve: /images/mission/pola-wescale.png
     </section>
     <section id="valeurs">
 
-<div class="container-fluid content bg-light" id="portfolio">
+<div class="container-fluid content bg-light" id="valeurs">
        <div class="row padding-btm">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Nos Valeurs</h2>
@@ -59,20 +59,22 @@ img_improve: /images/mission/pola-wescale.png
         </div>
         <div class="row no-gutters rolldown-gallery">
 {% for valeur in site.valeurs %}
-            <div class="col-md-3 col-sm-6 portfolio-item" data-content="#content-{{valeur.title| slugify }}">
-            <a class="portfolio-link">
+            <div class="col-md-3 col-sm-6 portfolio-item" id="#{{valeur.title| slugify: 'ascii' }}"
+                 data-content="#content-{{valeur.title| slugify }}">
+            <a class="portfolio-link" href="#{{valeur.title| slugify: 'ascii' }}">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="{{valeur.thumb|relative_url}}" alt="">
-            </a>
+
             <div class="portfolio-caption">
               <h4>{{valeur.title}}</h4>
             </div>
+            </a>
           </div>
-         <div class="gridder-content col-md-12 col-sm-12" id="content-{{valeur.title| slugify }}" style="display: none;">
+         <div class="gridder-content col-md-12 col-sm-12" id="content-{{valeur.title| slugify: 'ascii' }}" style="display: none;">
                 <div class="col-md-4 middle">
                     <img src="{{valeur.img|relative_url}}">
                 </div>
