--- a/wetribu.html
+++ b/wetribu.html
@@ -3,127 +3,253 @@ layout: default
 title: Recrutement - Wescale - Cloud expert
 class: job
 ---
+<section id="recrutement-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center home-content">
+                <h1 class="title bold">Découvrez la #WeTribu</h1>
+
+                <p class="more">
+                    <a id="it-btn" href="#nos-offres">
+                        <img src="{{"/images/more.png" | relative_url }}" alt="En savoir plus" width="52"
+                        height="44" /><br/>
+                        En savoir plus</a>
+                </p>
+            </div>
+        </div>
+        <div class="row bottom-line">
+            <div class="col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-heartbeat" aria-hidden="true"></i> Vivre</a>
+                </h3>
+            </div>
+            <div class="col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-share-alt" aria-hidden="true"></i>
+                    Partager</a></h3>
+            </div>
+            <div class="col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-magic" aria-hidden="true"></i>
+                    Décider</a></h3>
+            </div>
+            <div class="col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-smile-o" aria-hidden="true"></i>
+                    S'amuser</a></h3>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="nos-offres">
+
+    <div class="container-fluid content bg-gray portfolio-container">
+        <div class="row padding-btm">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">Découvrez nos postes ouverts</h2>
+            </div>
+        </div>
+        <div class="row no-gutters rolldown-gallery">
+
+            <div class="col-md-4 col-sm-4 portfolio-item white" id="cloud-designer"
+                 data-content="#content-cloud-designer">
+                <a class="portfolio-link" href="#">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                            <h2>Cloud Designer</h2>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="/images/wetribu/Cosmonaute_1.png" alt="">
+
+                    <div class="portfolio-caption">
+                        <h3>Cloud Designer</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="gridder-content col-md-12 col-sm-12 " id="content-cloud-designer" style="display: none;">
+                <div class="col-md-4 middle">
+<a href="https://wescale.welcomekit.co/jobs/cloud-designer_paris" class="job-button" target="_blank">
+                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Designer</a>
+                </div>
+                <div class="col-md-8 ">
+Savoir quelle planète aborder dans la constellation du Cloud n’est pas chose simple.
+Le Designer est un expert chevronné qui a déjà accompagné plusieurs expéditions. Il aide à déterminer le meilleur angle d’approche et la cargaison à embarquer vers une architecture idéale.                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4 portfolio-item white" id="cloud-builder"
+                 data-content="#content-cloud-builder">
+                <a class="portfolio-link" href="#">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                            <h2>Cloud Builder</h2>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="/images/wetribu/Cosmonaute_2.png" alt="">
+
+                    <div class="portfolio-caption">
+                        <h3>Cloud Builder</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="gridder-content col-md-12 col-sm-12" id="content-cloud-builder" style="display: none;">
+                <div class="col-md-4 middle">
+<a href="https://wescale.welcomekit.co/jobs/cloud-builder_paris" class="job-button" target="_blank">
+                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Builder</a>
+                </div>
+                <div class="col-md-8 ">
+C'est l'explorateur de la mission, il atterrit en premier sur la planète Cloud.
+Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterrissage et baliser le chemin. Il éclaircit, aplanit et trouve des solutions pour surmonter chaque obstacle rencontré.                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4 portfolio-item" id="cloud-runner"
+                 data-content="#content-cloud-runner">
+                <a class="portfolio-link" href="#">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                            <h2>Cloud Runner</h2>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="/images/wetribu/Cosmonaute_33.png" alt="">
+
+                    <div class="portfolio-caption">
+                        <h3>Cloud Runner</h3>
+                    </div>
+                </a>
+            </div>
+            <div class="gridder-content col-md-12 col-sm-12" id="content-cloud-runner" style="display: none;">
+                <div class="col-md-4 middle">
+                    <!--<img src="/images/wetribu/Cosmonaute_33.png">-->
+                    <a href="https://wescale.welcomekit.co/jobs/cloud-runner_paris" class="job-button" target="_blank">
+                         <i class="fa fa-external-link" aria-hidden="true"></i> Devenir Cloud Runner</a>
+                </div>
+                <div class="col-md-8 ">
+Une fois arrivé dans le Cloud, il est facile de se laisser déborder par la complexité de ce nouveau monde.
+Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapidement, en gardant un oeil d’expert technique sur les opérations.                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
 <div class="content">
-    <section id="recrutement-top" class="">
+    <section id="recrutement-middle">
         <div class="container">
 
 
             <div class="row">
-                <div class="col-md-offset-1 col-md-10 ">
+                <div class="col-md-12">
 
-                    <h1 class="title">Wescale recrute !</h1>
+                    <h1 class="">Wescale recrute !</h1>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-offset-1 col-md-10 history">
+                <div class="col-md-10 history">
                     <p>
-                        <b>WeScale</b> est une société de conseil dédiée au <b>cloud computing</b>, avec un esprit startup !
+                        <b>WeScale</b> est une société de conseil dédiée au <b>cloud computing</b>, avec un esprit
+                        startup !
                     </p>
                     <p>
-                        Mais c’est avant tout <b>une équipe de passionnés</b>, chacun par ses sujets qu’ils soient techniques ou non, qui accompagne, avec un brin de folie, ses clients dans <b>la réalisation de leurs projets</b>.
+                        Mais c’est avant tout <b>une équipe de passionnés</b>, chacun par ses sujets qu’ils soient
+                        techniques ou non, qui accompagne, avec un brin de folie, ses clients dans <b>la réalisation de
+                        leurs projets</b>.
                     </p>
                     <p>
-                        Depuis la création de WeScale en <b>2015</b>, nous partageons nos connaissances à travers nos missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous retrouvons autour d’<b>une vision commune</b> : “<b>Improve Together</b>”.
+                        Depuis la création de WeScale en <b>2015</b>, nous partageons nos connaissances à travers nos
+                        missions, nos publications (blog, TechTrends), nos conférences, mais surtout nous nous
+                        retrouvons autour d’<b>une vision commune</b> : “<b>Improve Together</b>”.
                     </p>
                     <p>
-                        Rejoindre WeScale, c'est participer à <b>une aventure humaine</b>, relever des défis, apprendre chaque jour, mais aussi s'amuser.
+                        Rejoindre WeScale, c'est participer à <b>une aventure humaine</b>, relever des défis, apprendre
+                        chaque jour, mais aussi s'amuser.
                     </p>
-                    <p>    
+                    <p>
                         Entrez dans la <b>#WeTribu</b> !
                     </p>
-                     <p class="more">
-                    <a href="#" id="nous-rejoindre">
-                        <img src="{{"/images/more-black.png" | relative_url }}" alt="Nous rejoindre" width="52"
-                        height="44" /><br/>
-                        En savoir plus
-                    </a>
-                </p>
+                </div>
+                <div class="col-md-2 ">
+                    <img src="/images/wetribu/happy-at-work-18-site.png" alt="Happy At Work Startup Index 2018 !">
                 </div>
             </div>
         </div>
     </section>
 </div>
-<section class="job-family">
-        <div class="container">
-              <div class="row">
-                <div class="col-md-12 job-spacer">
-                    &nbsp;
-                </div>
-            </div>
+
+<section class="side-image bg-light" id="rejoindre-wescale">
+    <div class="col-md-4 visible-lg-block visible-md-block image-holder-left">
+        <div class="welcome-box job-profils vertical-align">
+
+            <a href="https://wescale.welcomekit.co" class="job-button" target="_blank">
+                <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
+
         </div>
-</section>
-<section class="side-image" id="rejoindre-wescale">
-                <div class="col-md-4 visible-lg-block visible-md-block image-holder-left">
-                    <div class="welcome-box job-profils vertical-align">
-
-                        <a href="https://wescale.welcomekit.co" class="job-button" style="">
-                                <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
-
-                    </div>
-                </div>
+    </div>
     <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-4 col-xs-12">
-                    <div class="row">
-                        <h2  style="text-align: center">Rejoindre Wescale c'est :</h2>
-                        <div class="col-md-6">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-4 col-xs-12">
+                <div class="row">
+                    <h2 style="text-align: center">Rejoindre Wescale c'est :</h2>
+                    <div class="col-md-6">
                         <div style="float: left;">
-                            <div class="icon-holder"> <i class="fa fa-heartbeat" aria-hidden="true"></i> </div>
+                            <div class="icon-holder"><i class="fa fa-heartbeat" aria-hidden="true"></i></div>
                             <div class="icon-text">
-                                <h3>Vivre</h3>
-                                    <p>sa passion, avec d'autres fous de cloud, d'automatisation, bref de
+                                <h3 id="vivre">Vivre</h3>
+                                <p>sa passion, avec d'autres fous de cloud, d'automatisation, bref de
                                     développement
                                     d'infrastructures pour qui mettre en production le vendredi est la norme.
-                            </p></div>
+                                </p></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xs-12">
-                        <div class="icon-holder"> <i class="fa fa-share-alt" aria-hidden="true"></i> </div>
+                        <div class="icon-holder"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                         <div class="icon-text">
-                            <h3>Partager</h3>
-                                <p>son aventure et son expérience à toutes les occasions. Mais c'est aussi écrire des articles, suivre et donner des conférences et participer à des
-                                meetups. Une fois par mois lors du <b>WeShare</b> toute l'équipe se retrouve pendant une journée pour <b>échanger</b>, <b>se former</b> et <b>s'amuser</b>.
-                        </p></div>
-                    </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-xs-12">
-                            <div class="icon-holder"> <i class="fa fa-magic" aria-hidden="true"></i> </div>
-                            <div class="icon-text">
-                                <h3>Décider</h3>
-                                    <p>de la destinée de sa société. Nous avons une culture d'entreprise forte de
-                                    <b>transparence</b> et de <b>collaboration</b>. Parce que nous n'avons pas la prétention d'être parfait,
-                                    nous
-                                    cherchons tous ensemble à nous améliorer et plus généralement, à <b>améliorer la vie</b>
-                                    chez
-                                    Wescale.
-                                    Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
-                                    épanouir ensemble.
+                            <h3 id="partager">Partager</h3>
+                            <p>son aventure et son expérience à toutes les occasions. Mais c'est aussi écrire des
+                                articles, suivre et donner des conférences et participer à des
+                                meetups. Une fois par mois lors du <b>WeShare</b> toute l'équipe se retrouve pendant une
+                                journée pour <b>échanger</b>, <b>se former</b> et <b>s'amuser</b>.
                             </p></div>
-                        </div>
-                        <div class="col-md-6 col-xs-12">
-                            <div class="icon-holder"> <i class="fa fa-smile-o" aria-hidden="true"></i> </div>
-                            <div class="icon-text">
-                                <h3>S'amuser !</h3>
-                                    <p>car nous passons suffisament de temps dans notre vie à
-                                    travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
-                                    retrouvons
-                                    régulièrement lors des <b>WeNight</b> pour découvrir de nouveaux bars insolites de la
-                                    capitale.
-                                    Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
-                                    compétences
-                                    avec les <b>GO de Marrakech</b> et d'ailleurs.
-                            </p></div>
-                        </div>
                     </div>
-                    <div class="row job-profils">
-                        <div class="col-md-12 col-xs-12 visible-xs-block" style="padding-bottom: 20px;text-align: center;">
-                            <a href="https://wescale.welcomekit.co" class="job-button" style="padding: 10px;">
-                                <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-xs-12">
+                        <div class="icon-holder"><i class="fa fa-magic" aria-hidden="true"></i></div>
+                        <div class="icon-text">
+                            <h3 id="decider">Décider</h3>
+                            <p>de la destinée de sa société. Nous avons une culture d'entreprise forte de
+                                <b>transparence</b> et de <b>collaboration</b>. Parce que nous n'avons pas la prétention
+                                d'être parfait,
+                                nous
+                                cherchons tous ensemble à nous améliorer et plus généralement, à <b>améliorer la vie</b>
+                                chez
+                                Wescale.
+                                Chacun a son mot à dire et tout le monde est écouté. Notre but est de grandir et de nous
+                                épanouir ensemble.
+                            </p></div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="icon-holder"><i class="fa fa-smile-o" aria-hidden="true"></i></div>
+                        <div class="icon-text">
+                            <h3 id="s-amuser">S'amuser !</h3>
+                            <p>car nous passons suffisament de temps dans notre vie à
+                                travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
+                                retrouvons
+                                régulièrement lors des <b>WeNight</b> pour découvrir de nouveaux bars insolites de la
+                                capitale.
+                                Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
+                                compétences
+                                avec les <b>GO de Marrakech</b> et d'ailleurs.
+                            </p></div>
+                    </div>
+                </div>
+                <div class="row job-profils">
+                    <div class="col-md-12 col-xs-12 visible-xs-block" style="padding-bottom: 20px;text-align: center;">
+                        <a href="https://wescale.welcomekit.co" class="job-button" style="padding: 10px;">
+                            <i class="fa fa-external-link" aria-hidden="true"></i> Découvrir nos offres</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
