Fix images in weTribu and reduce caption

--- a/wetribu.html
+++ b/wetribu.html
@@ -57,9 +57,9 @@ class: job
                             <h2>Cloud Designer</h2>
                         </div>
                     </div>
-                    <img class="img-fluid" src="/images/wetribu/Cosmonaute_1.png" alt="">
+                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_1.png"| relative_url}}" alt="">
 
-                    <div class="portfolio-caption">
+                    <div class="portfolio-caption min-pad">
                         <h3>Cloud Designer</h3>
                     </div>
                 </a>
@@ -83,9 +83,9 @@ Le Designer est un expert chevronné qui a déjà accompagné plusieurs expédit
                             <h2>Cloud Builder</h2>
                         </div>
                     </div>
-                    <img class="img-fluid" src="/images/wetribu/Cosmonaute_2.png" alt="">
+                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_2.png"| relative_url}}" alt="">
 
-                    <div class="portfolio-caption">
+                    <div class="portfolio-caption min-pad">
                         <h3>Cloud Builder</h3>
                     </div>
                 </a>
@@ -109,9 +109,9 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
                             <h2>Cloud Runner</h2>
                         </div>
                     </div>
-                    <img class="img-fluid" src="/images/wetribu/Cosmonaute_33.png" alt="">
+                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_33.png"| relative_url}" alt="">
 
-                    <div class="portfolio-caption">
+                    <div class="portfolio-caption min-pad">
                         <h3>Cloud Runner</h3>
                     </div>
                 </a>
