Fix Jekyll markup

--- a/wetribu.html
+++ b/wetribu.html
@@ -109,7 +109,7 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
                             <h2>Cloud Runner</h2>
                         </div>
                     </div>
-                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_33.png"| relative_url}" alt="">
+                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_33.png"| relative_url}}" alt="">
 
                     <div class="portfolio-caption min-pad">
                         <h3>Cloud Runner</h3>
