Fix images location relatives

--- a/wetribu.html
+++ b/wetribu.html
@@ -169,7 +169,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                     </p>
                 </div>
                 <div class="col-md-2 ">
-                    <img src="/images/wetribu/happy-at-work-18-site.png" alt="Happy At Work Startup Index 2018 !">
+                    <img src="{{"/images/wetribu/happy-at-work-18-site.png"| relative_url}}" alt="Happy At Work Startup Index 2018 !">
                 </div>
             </div>
         </div>
