--- a/wetribu.html
+++ b/wetribu.html
@@ -18,19 +18,19 @@ class: job
             </div>
         </div>
         <div class="row bottom-line">
-            <div class="col-md-3">
-                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-heartbeat" aria-hidden="true"></i> Vivre</a>
-                </h3>
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-heartbeat" aria-hidden="true"></i> 
+                    Vivre</a></h3>
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-6 col-sm-3 col-md-3">
                 <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-share-alt" aria-hidden="true"></i>
                     Partager</a></h3>
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-6 col-sm-3 col-md-3">
                 <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-magic" aria-hidden="true"></i>
                     Décider</a></h3>
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-6 col-sm-3 col-md-3">
                 <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-smile-o" aria-hidden="true"></i>
                     S'amuser</a></h3>
             </div>
@@ -109,7 +109,7 @@ Le Builder a la charge de débusquer les problèmes, sécuriser l'aire d'atterri
                             <h2>Cloud Runner</h2>
                         </div>
                     </div>
-                    <img class="img-fluid" src="{{"/images/wetribu/Cosmonaute_33.png"| relative_url}}" alt="">
+                    <img class="img-fluid" src="{{"/images/wetribu/cosmonaute_33.png"| relative_url}}" alt="">
 
                     <div class="portfolio-caption min-pad">
                         <h3>Cloud Runner</h3>
@@ -169,7 +169,9 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                     </p>
                 </div>
                 <div class="col-md-2 ">
-                    <img src="{{"/images/wetribu/happy-at-work-18-site.png"| relative_url}}" alt="Happy At Work Startup Index 2018 !">
+                    <a target="_blank" href="https://choosemycompany.com/fr/recrutement/wescale/avis-des-salaries">
+                        <img src="{{"/images/wetribu/happy-at-work-18-site.png"| relative_url}}" alt="Happy At Work Startup Index 2018 !">
+                    </a>
                 </div>
             </div>
         </div>
@@ -190,7 +192,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
             <div class="col-md-8 col-md-offset-4 col-xs-12">
                 <div class="row">
                     <h2 style="text-align: center">Rejoindre Wescale c'est :</h2>
-                    <div class="col-md-6">
+                    <div class="col-sm-6 col-md-6">
                         <div style="float: left;">
                             <div class="icon-holder"><i class="fa fa-heartbeat" aria-hidden="true"></i></div>
                             <div class="icon-text">
@@ -201,7 +203,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                                 </p></div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-sm-6 col-md-6 col-xs-12">
                         <div class="icon-holder"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
                         <div class="icon-text">
                             <h3 id="partager">Partager</h3>
@@ -213,7 +215,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-sm-6 col-md-6 col-xs-12">
                         <div class="icon-holder"><i class="fa fa-magic" aria-hidden="true"></i></div>
                         <div class="icon-text">
                             <h3 id="decider">Décider</h3>
@@ -228,7 +230,7 @@ Le Runner prend le relais pour épauler et faire mûrir l’équipage plus rapid
                                 épanouir ensemble.
                             </p></div>
                     </div>
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-sm-6 col-md-6 col-xs-12">
                         <div class="icon-holder"><i class="fa fa-smile-o" aria-hidden="true"></i></div>
                         <div class="icon-text">
                             <h3 id="s-amuser">S'amuser !</h3>
