Upgrade formations page

--- a/formations.html
+++ b/formations.html
@@ -1,32 +1,212 @@
 ---
 layout: default
-title: Formations - Wescale - Cloud expert
+title: Formations - Wescale - Improve Together
 class: formations
+
+
 ---
+  <section  id="formations-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center home-content">
+                <h1 class="title bold">Nous formons sur les technologies qui nous passionnent</h1>
+                <h2 class="title">Ansible, Docker, Kubernetes, Terraform, XL Deploy, XL Release</h2>
 
+                <p class="more">
+                    <a id="savoir-plus-btn" class="scroll" href="#formations-dates">
+                        <img src="{{"/images/more.png" | relative_url }}" alt="Nos prochaines formations" width="52"
+                        height="44" /><br/>
+                        En savoir plus</a>
+                </p>
+            </div>
+        </div>
+<!--        <div class="row bottom-line">
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-heartbeat" aria-hidden="true"></i>
+                    Terraform</a></h3>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-share-alt" aria-hidden="true"></i>
+                    Ansible</a></h3>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-magic" aria-hidden="true"></i>
+                    Kubernetes</a></h3>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-smile-o" aria-hidden="true"></i>
+                    XL Release</a></h3>
+            </div>
+        </div>-->
+    </div>
+</section>
+        <section id="formations-dates">
+                <div class="content bg-gray">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h2 class="section-heading text-uppercase">Nos prochaines formations</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-6" style="text-align:center;">
+                        <a class="a-none" href="{{"/formations/Terraform.html" | relative_url }}" title="Formation Terraform : 4 et 5 Septembre 2018 Paris" >
+                        <div class="formation-push-date">
+                            <div class="row no-margin">
+                                <div class="col-xs-6">
+                                    <img src="{{"/images/formations/terraform.png"
+                                    | relative_url }}" style="max-width: 90%" alt="Formation Terraform 2 jours">
+                                </div>
+                                <div class="col-xs-6 bg-green">
+                                    <h3>4 <span style="font-size: 20px; color: #698aaa;">et</span> 5</h3>
+                                    <p class="bottom-cal">
+                                        Septembre<br/>
+                                        2018
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="push-caption">
+                                <a href="{{"/formations/Terraform.html" | relative_url }}" title="Inscription formation Terraform">Inscrivez vous</a>
+                            </p>
+                        </div></a>
+                    </div>
+                    <div class="col-md-4 col-sm-6" style="text-align:center;">
+                        <div class="formation-push-date">
 
-    <div class="content">
-      <section>
-        <div class="container">
-          <div class="row">
+                            <div class="row no-margin">
+                                <div class="col-xs-6">
+                                    <img src="{{"/images/formations/docker-kubernetes.png"
+                                    | relative_url }}" style="max-width: 90%">
+                                </div>
+                                <div class="col-xs-6 bg-green">
+                                    <h3>15 <span style="font-size: 20px; color: #698aaa;">au</span> 17</h3>
+                                    <p class="bottom-cal">
+                                        Octobre<br/>
+                                        2018
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="push-caption">
+                                <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}">Inscrivez vous</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6" style="text-align:center;">
+                        <div class="formation-push-date">
+                            <div class="row no-margin">
+                                <div class="col-xs-6">
+                                    <img src="{{"/images/formations/ansible.png"
+                                    | relative_url }}" style="max-width: 90%">
+                                </div>
+                                <div class="col-xs-6 bg-green">
+                                    <h3>29 <span style="font-size: 20px; color: #698aaa;">et</span> 30</h3>
+                                    <p class="bottom-cal">
+                                        Octobre<br/>
+                                        2018
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="push-caption">
+                                <a href="{{"/formations/Ansible.html" | relative_url }}">Inscrivez vous</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!--<div class="col-md-4" style="text-align:center;">
+                        <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-docker-kubernetes-test.png"
+                        | relative_url }}"></a>
+                    </div>-->
+                    <!--                    <div class="col-md-4" style="text-align:center;">
+                                            <a href="{{"/formations/Kubernetes.html" | relative_url }}"
+                                            ><img width="350" src="{{"/images/formations/formation-kubernetes.png"
+                                            | relative_url }}" alt="Formation Kubernetes les 16 et 17 Juillet à Paris"></a>
+                                        </div>
+                                        <div class="col-md-4" style="text-align:center;">
+                                            <a href="{{"/formations/Terraform.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-terraform-test.png"
+                                            | relative_url }}"></a>
+                                        </div>-->
+                    <div class="col-md-4 col-sm-6" style="text-align:center;">
+                        <div class="formation-push-date">
+                            <div class="row no-margin">
+                                <div class="col-xs-6">
+                                    <img src="{{"/images/formations/terraform.png"
+                                    | relative_url }}" style="max-width: 90%">
+                                </div>
+                                <div class="col-xs-6 bg-green">
+                                    <h3>4 <span style="font-size: 20px; color: #698aaa;">et</span> 5</h3>
+                                    <p class="bottom-cal">
+                                        Septembre<br/>
+                                        2018
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="push-caption">
+                                <a href="{{"/formations/Terraform.html" | relative_url }}">Inscrivez vous</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6" style="text-align:center;">
+                        <div class="formation-push-date">
+                            <div class="row no-margin">
+                                <div class="col-xs-6">
+                                    <img src="{{"/images/formations/docker-kubernetes.png"
+                                    | relative_url }}" style="max-width: 90%">
+                                </div>
+                                <div class="col-xs-6 bg-green">
+                                    <h3>15 <span style="font-size: 20px; color: #698aaa;">au</span> 17</h3>
+                                    <p class="bottom-cal">
+                                        Octobre<br/>
+                                        2018
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="push-caption">
+                                <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}">Inscrivez vous</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6" style="text-align:center;">
+                        <div class="formation-push-date">
+                            <div class="row no-margin">
+                                <div class="col-xs-6">
+                                    <img src="{{"/images/formations/ansible.png"
+                                    | relative_url }}" style="max-width: 90%">
+                                </div>
+                                <div class="col-xs-6 bg-green">
+                                    <h3>29 <span style="font-size: 20px; color: #698aaa;">et</span> 30</h3>
+                                    <p class="bottom-cal">
+                                        Octobre<br/>
+                                        2018
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="push-caption">
+                                <a href="{{"/formations/Ansible.html" | relative_url }}">Inscrivez vous</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!--<div class="col-md-4" style="text-align:center;">
+                        <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-docker-kubernetes-test.png"
+                        | relative_url }}"></a>
+                    </div>-->
+                    <!--                    <div class="col-md-4" style="text-align:center;">
+                                            <a href="{{"/formations/Kubernetes.html" | relative_url }}"
+                                            ><img width="350" src="{{"/images/formations/formation-kubernetes.png"
+                                            | relative_url }}" alt="Formation Kubernetes les 16 et 17 Juillet à Paris"></a>
+                                        </div>
+                                        <div class="col-md-4" style="text-align:center;">
+                                            <a href="{{"/formations/Terraform.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-terraform-test.png"
+                                            | relative_url }}"></a>
+                                        </div>-->
+                </div>
+            </div>
+            </div>
+        </section>
+        <section id="catalogue-formations">
+            <div class="content ">
+                <div class="container">
+        <div class="row">
             <div class="col-md-12">
-              <h1 class="title">Nos prochaines formations</h1>
-            </div>
-          </div>
-         <div class="row">
-            <div class="col-md-4" style="text-align:center;">
-                <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-docker-kubernetes-test.png" | relative_url }}"></a>
-            </div>
-            <div class="col-md-4" style="text-align:center;">
-              <a href="{{"/formations/Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-kubernetes.png" | relative_url }}"></a>
-            </div>
-            <div class="col-md-4" style="text-align:center;">
-              <a href="{{"/formations/Terraform.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-terraform-test.png" | relative_url }}"></a>
-            </div>
-          </div>
-            <div class="row">
-            <div class="col-md-12">
-              <h1 class="title">Découvrez nos formations</h1>
+              <h1 class="text-center">Notre catalogue de formations</h1>
             </div>
           </div>
           <div class="row formation">
@@ -59,11 +239,11 @@ class: formations
           <div class="row">
             <div class="col-md-12">
               <p style="text-align: center;font-weight: bold;">
-                wescale est agréé organisme de formation sous le numéro 11 75 553 1375.
+                wescale est enregistrée organisme de formation sous le numéro 11 75 553 1375.
               </p>
             </div>
           </div>
         </div>
+    </div>
       </section>
 
-    </div>
