--- a/mentions.html
+++ b/mentions.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Mentions légales - Wescale - Cloud expert
+title: Mentions légales - Wescale - Improve Togeteher
 class: mentions
 ---
 
