--- a/mission.html
+++ b/mission.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Notre mission - Wescale - Cloud expert
+title: Notre mission - Wescale - Improve Together
 class: mission
 img_improve: /images/mission/pola-wescale.png
 ---
