--- a/formations.html
+++ b/formations.html
@@ -24,6 +24,27 @@ push-date:
       short: "Formation Ansible 2 jours"
       badge-up: "29 <span>et</span> 30"
       badge-down: "Octobre<br/>2018"
+    - link: "/formations/Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 4 et 5 Septembre 2018 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "4 <span>et</span> 5"
+      badge-down: "Septembre<br/>2018"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker et Kubernetes"
+      fulltitle: "Formation Docker et Kubernetes : 15 au 17 Septembre 2018 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "15 <span>au</span> 17"
+      badge-down: "Octobre<br/>2018"
+    - link: "/formations/Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 29 et 30 Octobre 2018 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "29 <span>et</span> 30"
+      badge-down: "Octobre<br/>2018"
 ---
 
   <section  id="formations-top">
