--- a/mission.html
+++ b/mission.html
@@ -105,7 +105,7 @@ img_improve: /images/mission/pola-wescale.png
                     <div class="equipe-mask"></div>
                     <div class="equipe-name">
                         {% if we.job %}
-                        <a href="wetribu.html">
+                        <a href="{{ "wetribu.html" | relative_url }} ">
                         {% elsif we.blogname %}
                         <a href="http://blog.wescale.fr/author/{{we.blogname}}">
                         {% endif %}
