--- a/formations.html
+++ b/formations.html
@@ -3,13 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 4 et 5 Septembre 2018 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "4 <span>et</span> 5"
-      badge-down: "Septembre<br/>2018"
     - link: "/formations/XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
@@ -44,6 +37,13 @@ push-date:
       fulltitle: "Formation Terraform : 6 et 7 Novembre 2018 Paris"
       short: "Formation Terraform 2 jours"
       badge-up: "6 <span>et</span> 7"
+      badge-down: "Novembre<br/>2018"
+    - link: "/formations/Microservices.html"
+      img: "/images/formations/microservices.png"
+      title: "Microservices"
+      fulltitle: "Formation Microservices : 21 au 23 Novembre 2018 Paris"
+      short: "Formation Microservices 3 jours"
+      badge-up: "21 <span>au</span> 23"
       badge-down: "Novembre<br/>2018"
 ---
 
