--- a/formations.html
+++ b/formations.html
@@ -3,20 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 26 au 28 Septembre 2018 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "26 <span>au</span> 28"
-      badge-down: "Septembre<br/>2018"
-    - link: "/formations/XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 2 et 3 Octobre 2018 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "2 <span>et</span> 3"
-      badge-down: "Octobre<br/>2018"
     - link: "/formations/Docker-Kubernetes.html"
       img: "/images/formations/docker-kubernetes.png"
       title: "Docker et Kubernetes"
@@ -45,6 +31,20 @@ push-date:
       short: "Formation Microservices 3 jours"
       badge-up: "21 <span>au</span> 23"
       badge-down: "Novembre<br/>2018"
+    - link: "/formations/XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 5 au 7 Décembre 2018 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "5 <span>au</span> 7"
+      badge-down: "Décembre<br/>2018"
+    - link: "/formations/XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 13 et 14 Décembre 2018 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "13 <span>et</span> 14"
+      badge-down: "Décembre<br/>2018"
 ---
 
   <section  id="formations-top">
