--- a/formations.html
+++ b/formations.html
@@ -3,13 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
-      title: "Docker et Kubernetes"
-      fulltitle: "Formation Docker et Kubernetes : 15 au 17 Octobre 2018 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "15 <span>au</span> 17"
-      badge-down: "Octobre<br/>2018"
     - link: "/formations/Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
@@ -38,6 +31,13 @@ push-date:
       short: "Formation XL Deploy 3 jours"
       badge-up: "5 <span>au</span> 7"
       badge-down: "Décembre<br/>2018"
+    - link: "/formations/Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
+      title: "Kubernetes"
+      fulltitle: "Formation Kubernetes : 11 et 12 Décembre 2018 Paris"
+      short: "Formation Kubernetes 2 jours"
+      badge-up: "11 <span>et</span> 12"
+      badge-down: "Décembre<br/>2018"
     - link: "/formations/XL-Release.html"
       img: "/images/formations/xl-release.png"
       title: "XL Release"
@@ -45,6 +45,7 @@ push-date:
       short: "Formation XL Release 2 jours"
       badge-up: "13 <span>et</span> 14"
       badge-down: "Décembre<br/>2018"
+
 ---
 
   <section  id="formations-top">
