--- a/formations.html
+++ b/formations.html
@@ -3,27 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Ansible.html"
-      img: "/images/formations/ansible.png"
-      title: "Ansible"
-      fulltitle: "Formation Ansible : 29 et 30 Octobre 2018 Paris"
-      short: "Formation Ansible 2 jours"
-      badge-up: "29 <span>et</span> 30"
-      badge-down: "Octobre<br/>2018"
-    - link: "/formations/Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 6 et 7 Novembre 2018 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "6 <span>et</span> 7"
-      badge-down: "Novembre<br/>2018"
-    - link: "/formations/Microservices.html"
-      img: "/images/formations/visuelmicroservices.png"
-      title: "Microservices"
-      fulltitle: "Formation Microservices : 21 au 23 Novembre 2018 Paris"
-      short: "Formation Microservices 3 jours"
-      badge-up: "21 <span>au</span> 23"
-      badge-down: "Novembre<br/>2018"
     - link: "/formations/XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
@@ -45,6 +24,27 @@ push-date:
       short: "Formation XL Release 2 jours"
       badge-up: "13 <span>et</span> 14"
       badge-down: "Décembre<br/>2018"
+    - link: "/formations/Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 10 et 11 Janvier 2019 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "10 <span>et</span> 11"
+      badge-down: "Janvier<br/>2019"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker et Kubernetes"
+      fulltitle: "Formation Docker et Kubernetes : 5 au 7 Février 2019 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "5 <span>au</span> 7"
+      badge-down: "Février<br/>2019"
+    - link: "/formations/ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "5 <span>et</span> 6"
+      badge-down: "Mars<br/>2019"
 
 ---
 
