--- a/formations.html
+++ b/formations.html
@@ -3,6 +3,13 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
+    - link: "/formations/XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 30 janvier au 1er Février 2019 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: ""30 <span>au</span> 1"
+      badge-down: "Jan-Fév<br/>2019"
     - link: "/formations/Kubernetes.html"
       img: "/images/formations/kubernetes.png"
       title: "Kubernetes"
@@ -38,13 +45,7 @@ push-date:
       short: "Formation Ansible 2 jours"
       badge-up: "5 <span>et</span> 6"
       badge-down: "Mars<br/>2019"
-    - link: "/formations/XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 30 janvier au 1er Février 2019 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: ""30 <span>au</span> 1"
-      badge-down: "Jan / Fév<br/>2019"
+
 
 ---
 
