--- a/formations.html
+++ b/formations.html
@@ -8,7 +8,7 @@ push-date:
       title: "XL Deploy"
       fulltitle: "Formation XL Deploy : 30 janvier au 1er Février 2019 Paris"
       short: "Formation XL Deploy 3 jours"
-      badge-up: ""30 <span>au</span> 1"
+      badge-up: "30 <span>au</span> 1"
       badge-down: "Jan-Fév<br/>2019"
     - link: "/formations/Kubernetes.html"
       img: "/images/formations/kubernetes.png"
