--- a/formations.html
+++ b/formations.html
@@ -38,7 +38,7 @@ push-date:
       short: "Formation Docker Kubernetes 3 jours"
       badge-up: "5 <span>au</span> 7"
       badge-down: "Février<br/>2019"
-    - link: "/formations/ansible.html"
+    - link: "/formations/Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
       fulltitle: "Formation Ansible : 5 au 6 Mars 2019 Paris"
